--- a/DMCombatScreen.WebMVC/Views/Shared/_Layout.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Shared/_Layout.cshtml
@@ -47,10 +47,10 @@
         <hr class="blackline" />
         <footer>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-8">
                     <p>&copy; @DateTime.Now.Year - Drew Wright</p>
                 </div>
-                <div class="col-md-4 col-md-offset-4 footer-links">
+                <div class="col-md-4 col-xs-1 footer-links">
                     @Html.ActionLink("Contact", "Contact", "Home", null, new { @class = "table-links" })
                 </div>
             </div>
