--- a/DMCombatScreen.WebMVC/Views/Home/Index.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Home/Index.cshtml
@@ -4,13 +4,16 @@
 
 <div class="jumbotron">
     <div class="image-container">
-        <div class="col-md-auto col-xs-12">
-            <h1 class="logo-text">GM Combat Screen</h1>
+        <div class="row">
+            <div class="col-md-11 col-xs-12">
+                <h1 class="logo-text">GM Combat Screen</h1>
+            </div>
         </div>
-        <div class="col-md-auto col-md-offset-6 col-xs-12">
-            <img src="~/Content/Assets/dmscreen-transparent.png" class="logo" />
-            <img src="~/Content/Assets/d20logored.png" class="dice-image"/>
-            
+        <div class="row">
+            <div class="col-md-1 col-md-offset-11 col-xs-1">
+                <img src="~/Content/Assets/dmscreen-transparent.png" class="logo" />
+                <img src="~/Content/Assets/d20logored.png" class="dice-image" />
+            </div>
         </div>
     </div>
 </div>
