--- a/DMCombatScreen.WebMVC/Content/Site.css
+++ b/DMCombatScreen.WebMVC/Content/Site.css
@@ -265,6 +265,12 @@ textarea {
     max-width: 280px;
 }
 
+.form-control:focus {
+    border-color: #2A2C2B;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(42, 44, 43, 0.6);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(42, 44, 43, 0.6);
+}
 /*overriding bootstrap button styles to match page colors*/
 .btn-danger {
     background-color: #f44336;
