--- a/DMCombatScreen.WebMVC/Views/Attendance/CreateMultiple.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Attendance/CreateMultiple.cshtml
@@ -88,7 +88,7 @@
 
         $checkboxes.on("change", function () {
             $checkboxes.each(function () {
-                checkboxValues[this.class] = this.checked;
+                checkboxValues[this.className] = this.checked;
             });
 
             localStorage.setItem("checkboxValues", JSON.stringify(checkboxValues));
