--- a/DMCombatScreen.WebMVC/Views/RunCombat/RollInitiative.cshtml
+++ b/DMCombatScreen.WebMVC/Views/RunCombat/RollInitiative.cshtml
@@ -25,7 +25,7 @@
             </th>
         </tr>
 
-        @for (int i = 0; i < Model.Count(); i++ )
+        @for (int i = 0; i < Model.Count(); i++)
         {
             @Html.HiddenFor(model => model[i].ID)
             @Html.HiddenFor(model => model[i].CharacterID)
@@ -53,7 +53,7 @@
                 @if (!Model[i].IsPlayer)
                 {
                     <td>
-                        @Html.EditorFor(model => model[i].CurrentHP)
+                        @Html.EditorFor(model => model[i].CurrentHP, new { htmlAttributes = new { data_toggle = "tooltip", data_placement = "bottom", title = "Leave blank for Max HP" } })
                         @Html.ValidationMessageFor(model => model[i].CurrentHP, "", new { @class = "text-danger" })
                     </td>
                 }
@@ -69,7 +69,7 @@
     <div class="form-group">
         <div class="col-md-10">
             <input type="submit" value="Submit" class="btn btn-danger btn" />
-            
+
         </div>
     </div>
 }
@@ -77,3 +77,11 @@
 <div>
     @Html.ActionLink("Back to List", "Index", null, new { @class = "table-links" })
 </div>
+
+@section Scripts {
+    <script>
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        })
+    </script>
+}
