--- a/DMCombatScreen.WebMVC/Views/Character/Create.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Character/Create.cshtml
@@ -7,13 +7,13 @@
 <h2>Create a Character</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        
-        <hr class="redline"/>
+
+        <hr class="redline" />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -26,7 +26,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.MaxHP, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.MaxHP, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.MaxHP, new { htmlAttributes = new { @class = "form-control", data_toggle="tooltip", data_placement = "bottom", title = "Leave blank for Player Characters" } })
                 @Html.ValidationMessageFor(model => model.MaxHP, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -34,7 +34,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.InitiativeModifier, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.InitiativeModifier, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.InitiativeModifier, new { htmlAttributes = new { @class = "form-control", data_toggle="tooltip", data_placement = "bottom", title = "Leave blank for Player Characters" } })
                 @Html.ValidationMessageFor(model => model.InitiativeModifier, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -42,15 +42,15 @@
         <div class="form-group">
             @Html.LabelFor(model => model.InitiativeAbilityScore, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.InitiativeAbilityScore, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.InitiativeAbilityScore, new { htmlAttributes = new { @class = "form-control", data_toggle="tooltip", data_placement = "bottom", title = "Leave blank for Player Characters" } })
                 @Html.ValidationMessageFor(model => model.InitiativeAbilityScore, "", new { @class = "text-danger" })
             </div>
         </div>
-        
+
         <div class="form-group">
-            @Html.LabelFor(model => model.CharacterType, htmlAttributes: new { @class = "control-label col-md-2"})
+            @Html.LabelFor(model => model.CharacterType, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.CharacterType, EnumHelper.GetSelectList(typeof(DMCombatScreen.Data.CharacterType)), htmlAttributes: new { @class = "form-control" } )
+                @Html.DropDownListFor(model => model.CharacterType, EnumHelper.GetSelectList(typeof(DMCombatScreen.Data.CharacterType)), htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.CharacterType, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -79,4 +79,9 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script>
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        })
+    </script>
 }
