--- a/DMCombatScreen.WebMVC/Views/Account/Login.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Account/Login.cshtml
@@ -12,7 +12,7 @@
             {
                 @Html.AntiForgeryToken()
                 <h4>Use a local account to log in.</h4>
-                <hr />
+                <hr class="redline"/>
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
                     @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
@@ -38,11 +38,11 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Log in" class="btn btn-default" />
+                        <input type="submit" value="Log in" class="btn btn-danger" />
                     </div>
                 </div>
                 <p>
-                    @Html.ActionLink("Register as a new user", "Register")
+                    @Html.ActionLink("Register as a new user", "Register", null, new { @class = "table-links" })
                 </p>
                 @* Enable this once you have account confirmation enabled for password reset functionality
                     <p>
