--- a/DMCombatScreen.WebMVC/Views/Manage/ChangePassword.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Manage/ChangePassword.cshtml
@@ -8,8 +8,8 @@
 @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Change Password Form</h4>
-    <hr />
+    
+    <hr class="redline"/>
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
         @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
@@ -31,7 +31,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Change password" class="btn btn-default" />
+            <input type="submit" value="Change password" class="btn btn-danger" />
         </div>
     </div>
 }
