styling added to other home views

--- a/DMCombatScreen.WebMVC/Views/Home/About.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Home/About.cshtml
@@ -1,7 +1,10 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "About GM Combat Screen";
 }
-<h2>@ViewBag.Title.</h2>
+<h2 class="pagetitle">@ViewBag.Title</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<hr class="redline"/>
+
+<p>GM Combat Screen lets you create characters and combats for your Table-Top Role Playing Games that use an initiative system for turn order.
+    Use the Characters menu to create Player and Non-Player Characters.</p>
