--- a/DMCombatScreen.WebMVC/Views/Home/Contact.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Home/Contact.cshtml
@@ -1,8 +1,10 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
+<h2 class="pagetitle">@ViewBag.Title</h2>
 <h3>@ViewBag.Message</h3>
+
+<hr class="redline" />
 
 <address>
     One Microsoft Way<br />
