--- a/DMCombatScreen.WebMVC/Views/Attendance/CreateMultiple.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Attendance/CreateMultiple.cshtml
@@ -35,7 +35,7 @@
         <div class="form-group">
             <div class="col-md-10">
                 <h3 style="font-weight: 600;">Select Characters to Add</h3>
-                <table class="table" id="checkbox-container">
+                <table class="table table-responsive table-hover" id="checkbox-container">
                     <tr>
                         <th></th>
                         <th>
