minor ui tweaks

--- a/DMCombatScreen.WebMVC/Views/Attendance/CreateMultiple.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Attendance/CreateMultiple.cshtml
@@ -37,7 +37,7 @@
                 <h3 style="font-weight: 600;">Select Characters to Add</h3>
                 <table class="table table-responsive table-hover" id="checkbox-container">
                     <tr>
-                        <th></th>
+                        <th><input type="reset" value="Unselect All" class="btn btn-danger" /></th>
                         <th>
                             @Html.ActionLink("Character Name", "CreateMultiple", new { sortOrder = ViewBag.NameSortParam })
                             <span class="glyphicon glyphicon-sort" aria-hidden="true"></span>
