--- a/DMCombatScreen.WebMVC/Views/Home/About.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Home/About.cshtml
@@ -6,5 +6,10 @@
 
 <hr class="redline"/>
 
-<p>GM Combat Screen lets you create characters and combats for your Table-Top Role Playing Games that use an initiative system for turn order.
-    Use the Characters menu to create Player and Non-Player Characters.</p>
+<p>GM Combat Screen lets you create characters and combats for your Table-Top Role Playing Games that use an initiative system for turn order.</p>
+<ul>
+    <li>Use the Characters menu to create Player and Non-Player Characters.</li>
+    <li>Use the Combats menu to create a combat and add Characters.</li>
+    <li>Use the Encounters menu to check and edit which Characters are in which Combats.</li>
+    <li>Finally, use the Run Combat menu to run your Encounters!</li>
+</ul>
