--- a/DMCombatScreen.WebMVC/Views/Home/Contact.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Home/Contact.cshtml
@@ -2,18 +2,8 @@
     ViewBag.Title = "Contact";
 }
 <h2 class="pagetitle">@ViewBag.Title</h2>
-<h3>@ViewBag.Message</h3>
+<h3>Drew Wright</h3>
 
 <hr class="redline" />
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
-
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+<p>Find out more about me or contact me through my <a href="http://drewawright.github.io" target="_blank" class="table-links">portfolio</a>! </p>
