--- a/DMCombatScreen.WebMVC/Views/RunCombat/RunCombat.cshtml
+++ b/DMCombatScreen.WebMVC/Views/RunCombat/RunCombat.cshtml
@@ -6,6 +6,8 @@
 
 <h2>Run Combat</h2>
 
+<h3 class="pagetitle" style="text-indent: 4.8em;">@Model.First().CombatName</h3>
+
 @if (TempData.ContainsKey("SaveResult"))
 {
     <div class="alert alert-success alert-dismissable fade in" role="alert">
