--- a/DMCombatScreen.WebMVC/Views/RunCombat/RollInitiative.cshtml
+++ b/DMCombatScreen.WebMVC/Views/RunCombat/RollInitiative.cshtml
@@ -74,8 +74,10 @@
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index", null, new { @class = "table-links" })
+<div class="row">
+    <div class="col-md-12 back-link">
+        @Html.ActionLink("Back to List", "Index", null, new { @class = "table-links" })
+    </div>
 </div>
 
 @section Scripts {
