--- a/DMCombatScreen.WebMVC/Views/RunCombat/Index.cshtml
+++ b/DMCombatScreen.WebMVC/Views/RunCombat/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Run Combat!</h2>
+<h2>Choose Your Combat</h2>
 
 <p>
     @Html.ActionLink("Create New Combat", "Create", "Combat", new { @class = "btn btn-danger btn-lg" })
