css comments added

--- a/DMCombatScreen.WebMVC/Content/Site.css
+++ b/DMCombatScreen.WebMVC/Content/Site.css
@@ -319,6 +319,7 @@ textarea {
     font-size: 1.4rem;
 }
 
+/*Detail View Styling*/
 .dl-horizontal dt, dd {
     padding-top: 1em;
     width: 180px;
