link tag for favicon added

--- a/DMCombatScreen.WebMVC/Views/Shared/_Layout.cshtml
+++ b/DMCombatScreen.WebMVC/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - GM Combat Screen</title>
     <link href="https://fonts.googleapis.com/css?family=KoHo:400,600|Metamorphous&display=swap" rel="stylesheet">
+    <link rel="icon" href="~/favicon.ico" type="image/x-icon" />
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
